[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Main/StateMachine/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://src/Singletons/GameManager/StateMachine/Paused.gd" type="Script" id=2]
[ext_resource path="res://src/Singletons/GameManager/StateMachine/Active.gd" type="Script" id=3]
[ext_resource path="res://src/Singletons/GameManager/StateMachine/Inactive.gd" type="Script" id=4]
[ext_resource path="res://src/Singletons/GameManager/GameManager.gd" type="Script" id=5]
[ext_resource path="res://src/Singletons/GameManager/StateMachine/Starting.gd" type="Script" id=6]

[node name="GameManager" type="Node"]
pause_mode = 2
script = ExtResource( 5 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )
initial_state = NodePath("Inactive")

[node name="Inactive" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Starting" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Active" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Paused" type="Node" parent="StateMachine"]
script = ExtResource( 2 )
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
